--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-libipfix (0.8.2-1) trusty; urgency=low
+libipfix (0.8.2-1tcp1) trusty; urgency=medium
+
+  * tcp cloud build
+
+ -- Filip Pytloun <filip@pytloun.cz>  Mon, 13 Jul 2015 10:07:19 +0200
+
+libipfix (0.8.2-1) oneiric; urgency=low
 
   [ Ramon Masek ]
   * put some typedef's into ipfix.h
