--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libipfix (0.8.2-1tcp2+xenial) xenial; urgency=medium
+
+  * build for xenial
+
+ -- Filip Pytloun <filip@pytloun.cz>  Fri, 15 Jul 2016 11:09:06 +0200
+
 libipfix (0.8.2-1tcp1) trusty; urgency=medium
 
   * tcp cloud build
