--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libipfix (0.8.2+1tcp3+xenial1) xenial; urgency=medium
+
+  * Fix revision of native package
+
+ -- Filip Pytloun <filip@pytloun.cz>  Thu, 05 Jan 2017 13:18:06 +0100
+
 libipfix (0.8.2-1tcp2+xenial) xenial; urgency=medium
 
   * build for xenial
